# rust_dfinity_hello

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/rust_dfinity_hello/: Cargo.toml
src/rust_dfintiy_hello_assets/public/: index.js
