[package]
name = "rust_dfinity_hello"
version = "0.1.0"
authors = ["Feng <your-email@example.com>"]
edition = "2018"

[lib]
path = "main.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { path = "../../../../cdk-rs/src/ic-cdk", version = "0.2.3" }
ic-cdk-macros = { path = "../../../../cdk-rs/src/ic-cdk-macros", version = "0.2.3" }